# openwrt-ubus-curl

./: Makefile  README.md  curl-ubus.init
src/: CMakeLists.txt  server.c
